<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ISLAMIK+</string>
    <string name="company_name">Semper Altius</string>
    <string name="gcm_sender_id">id:413068111620</string>
    <string name="place_api_key">AIzaSyAdx1b_1BqKtSNSg04CssVVd5I5O-JiBbM</string>
    <string name="error">Error</string>
    <string name="okay">Okay</string>
    <string name="success">Success</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="warning">Warning</string>
    <string name="prev_">&lt;&lt; PREVIEW</string>
    <string name="next_">NEXT &gt;&gt;</string>
    <string name="send_">SEND &gt;&gt;</string>
    <string name="confirm">CONFIRM</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="agree">Agree</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password"><![CDATA[<u>Forgot Password?<u>]]></string>
    <string name="valid_No_phone_number_password">Please enter your phone number and password.</string>
    <string name="valid_No_phone_number">Please enter phone number.</string>
    <string name="valid_No_password">Please enter password.</string>
    <string name="invalid_incorrect_password">Password entered is incorrect.</string>
    <string name="no_account_signup_here">No account? <![CDATA[<font color=\'#0e6129\'><u>Sign Up Here!</u></font>]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="valid_Invalid_mosque">This user is customer.</string>
    <string name="login_label">We value your privacy, therefore your phone number is required to create your login information and to receive or place a call with a mosque, a usthadh or a merchant, in case your choose to use those functions. we do not track your activity across the web.</string>
    <string name="by_continuing_your_agreeing">By continuing your are agreeing to KAOTECH LLC’s </string>
    <string name="terms_conditions_"><![CDATA[<u>TERMS AND CONDITIONS</u>]]></string>
    <string name="privacy_policy_"><![CDATA[<u>PRIVACY POLICY</u>]]></string>
    <string name="and_confirm_that">and confirm that</string>
    <string name="you_read_our">you have read our</string>
    <string name="email_address">Email address</string>
    <string name="valid_No_email_address">Please enter email address.</string>
    <string name="valid_Invalid_email">Email address is invalid.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_label">Input the email used to create your account. We will send you a link to reset your password.</string>
    <string name="success_forgot_password">We have sent a reset password link to your email.</string>
    <string name="valid_No_email_register">Phone number entered is not registered.</string>
    <string name="valid_No_phone_number_register">Phone number entered is not registered.</string>
    <string name="not_now">Not now</string>
    <string name="first_name_main_imam">First name of the main imam</string>
    <string name="surname_main_imam">Surname of the main imam</string>
    <string name="name_mosque">Name of the mosque</string>
    <string name="address_mosque">Address of the mosque</string>
    <string name="confirm_password">Confirm password</string>
    <string name="valid_No_first_name">Please enter first name of the main imam.</string>
    <string name="valid_No_surname">Please enter surname of the main imam.</string>
    <string name="valid_No_name_mosque">Please enter name of the mosque.</string>
    <string name="valid_No_address_mosque">Please enter address of the mosque.</string>
    <string name="valid_No_confirm_password">Please enter confirm password.</string>
    <string name="valid_Invalid_password">Password doesn\'t match.</string>
    <string name="jumah_sermon">JUMAH SERMON</string>
    <string name="regular_sermon">REGULAR SERMON</string>
    <string name="manage_donation">MANAGE DONATION</string>
    <string name="settings">SETTINGS</string>
    <string name="messages">MESSAGES</string>
    <string name="book_session">BOOK A SESSION</string>
    <string name="daily_post">DAILY POST</string>
    <string name="logout">Log Out</string>
    <string name="label_log_out">Are you sure you want to log out?</string>
    <string name="manage_quranic_islamic">MANAGE QURANIC/ISLAMIC STUDIES SESSION</string>
    <string name="price_person_session_label">PLEASE SELECT PRICE PER HOUR FOR 1/1 SESSION:</string>
    <string name="price_group_session_label">PLEASE SELECT PRICE PER HOUR FOR GROUP SESSION:</string>
    <string name="create_post">Create Post</string>
    <string name="edit_post">EDIT POST</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="valid_No_title">Please enter title.</string>
    <string name="valid_No_description">Please enter description.</string>
    <string name="valid_No_photo">Please upload_photo.</string>
    <string name="confirm_delete_post">Are you sure you want to delete this post?</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="take_new_photo">Take a new photo</string>
    <string name="language_">Language:</string>
    <string name="upload_photo_video">Upload Photo or Video</string>
    <string name="upload_video_audio">Upload Video or Audio</string>
    <string name="take_new_video">Take a new video</string>
    <string name="select_gallery">Select from gallery</string>
    <string name="select_video_gallery">Select video from gallery</string>
    <string name="select_audio_file">Select audio from file</string>
    <string name="type_topic_sermon">Type the topic of the sermon:</string>
    <string name="valid_No_topic">Please enter topic.</string>
    <string name="success_jumah_message">Imam %1$s is going live for JUMAH SERMON and will talk about \n %2$s</string>
    <string name="success_regular_message">Imam %1$s is going live for REGULAR SERMON and will talk about \n %2$s</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_sermon">Are you sure you want to delete this sermon?</string>
    <string name="select_language_sermon">Select the language of your sermon</string>
    <string name="amount_donated">Amount Donated</string>
    <string name="raise_funds">Raise Funds</string>
    <string name="virtual_baskets">Virtual Baskets</string>
    <string name="no_donation">No Donation</string>
    <string name="name_">Name</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="total_">Total:</string>
    <string name="name_fundraiser_">Name of the fundraiser:</string>
    <string name="name_mosque_">Name of the mosque:</string>
    <string name="reasons_fundraising_">Reasons for fundraising:</string>
    <string name="amount_seeking_">Amount seeking:</string>
    <string name="raising_message">Dear ISLAMIK users, « %1$s » just launched a fundraising campaign to « %2$s » and is seeking a total amount of « $%3$s »</string>
    <string name="choose_amount_seeking_individual_">Choose amount seeking per individual:</string>
    <string name="confirm_mosque_virtual_basket">The mosque has a virtual basket of « %1$s » would you like to make a donation?</string>
    <string name="valid_No_fundraiser">Please enter name of the fundraiser.</string>
    <string name="valid_No_mosque">Please enter name of the mosque.</string>
    <string name="valid_No_reason">Please enter reasons for fundraising.</string>
    <string name="valid_No_amount">Please enter amount.</string>
    <string name="topic">Topic</string>
    <string name="no_basket">No Basket</string>
    <string name="topic_">Topic:</string>
    <string name="question">Question:</string>
    <string name="answer">Answer:</string>
    <string name="valid_No_answer">Please enter answer.</string>
    <string name="submit">Submit</string>
    <string name="islamophobia_gauge">ISLAMOPHOBIA GAUGE</string>
    <string name="type_text">Type the text</string>
    <string name="type_web_link">Type the web link</string>
    <string name="choose_color_text_background">Choose color of text background</string>
    <string name="choose_color_text">Choose color of text</string>
    <string name="choose_size_text">Choose size of text</string>
    <string name="choose_font_text">Choose font of text</string>
    <string name="valid_No_gauge">Please enter gauge.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="payment_information">Payment Information</string>
    <string name="rate_app">Rate App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="about_app">About App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="save_change">Save Change</string>
    <string name="notification">NOTIFICATION</string>
    <string name="msg_notification_book">%1$s just book a session for (%2$s and $%3$s).</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="msg_notification_accepted">%1$s session request has been accepted.</string>
    <string name="msg_notification_declined">%1$s session requested has been rejected, please select another date or message the %2$s directly.</string>
    <string name="you_accepted_request">You have accepted the request.</string>
    <string name="you_rejected_request">You have rejected the request.</string>
    <string name="enter_message">Enter message here</string>
    <string name="insert_message">Please enter message.</string>
    <string name="noti_chat">%1$s sent new message: %2$s</string>
    <string name="attached_voice">Attached Voice</string>
    <string name="attached_photo">Attached Photo</string>
    <string name="attached_video">Attached Video</string>
    <string name="about_label">
    "<![CDATA[
        <p>This app was built to make every salat as smooth and easy as possible, and create a hub for all the mosque in the world so the user could easily feel the beauty of Islam at his fingertips.</p>
    ]]>
    "</string>
</resources>