<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_large"
    android:orientation="vertical"
    android:background="@color/white" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:background="@drawable/upload_photo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/title"
                android:textSize="@dimen/textsize_normal"
                android:textAllCaps="true"
                android:textColor="@color/text_normal"/>
            <EditText
                android:id="@+id/edt_title"
                style="@style/normalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_rectangle_gray_line"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/description"
                android:textSize="@dimen/textsize_normal"
                android:textAllCaps="true"
                android:textColor="@color/text_normal"/>
            <EditText
                android:id="@+id/edt_description"
                style="@style/normalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/image_very_small"
                android:gravity="top"
                android:minLines="5"
                android:background="@drawable/bg_rectangle_gray_line"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_create"
        style="@style/normalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/create_post"/>
    <Button
        android:id="@+id/btn_save"
        style="@style/normalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/save_change"/>
</LinearLayout>