<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:slidemenu="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_light" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue">
        <TextView
            android:id="@+id/txt_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:paddingTop="@dimen/image_very_small"
            android:paddingBottom="@dimen/image_very_small"
            android:gravity="center"
            android:text="@string/amount_donated"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/txt_raise"
            style="@style/normalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:paddingTop="@dimen/image_very_small"
            android:paddingBottom="@dimen/image_very_small"
            android:gravity="center"
            android:text="@string/raise_funds"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/txt_basket"
            style="@style/normalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:paddingTop="@dimen/image_very_small"
            android:paddingBottom="@dimen/image_very_small"
            android:gravity="center"
            android:text="@string/virtual_baskets"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/white"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        slidemenu:layout_role="content"
        android:background="@color/white" />
</LinearLayout>